--- a/src/Soenneker.Compression.SevenZip.csproj
+++ b/src/Soenneker.Compression.SevenZip.csproj
@@ -42,8 +42,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
         <PackageReference Include="SharpCompress" Version="0.38.0" />
+        <PackageReference Include="Soenneker.Extensions.Task" Version="3.0.80" />
         <PackageReference Include="Soenneker.Utils.Directory" Version="3.0.452" />
     </ItemGroup>
 </Project>
