--- a/src/Soenneker.Compression.SevenZip.csproj
+++ b/src/Soenneker.Compression.SevenZip.csproj
@@ -48,16 +48,14 @@
         <PackageReference Include="SharpCompress" Version="0.40.0" />
         <PackageReference Include="Soenneker.Extensions.Task" Version="3.0.102" />
         <PackageReference Include="Soenneker.Extensions.ValueTask" Version="3.0.92" />
-        <PackageReference Include="Soenneker.Libraries.SevenZip" Version="3.0.8" />
-        <PackageReference Include="Soenneker.Libraries.SevenZip.Linux" Version="3.0.6" />
+        <PackageReference Include="Soenneker.Libraries.SevenZip" Version="3.0.8">
+            <PrivateAssets>analyzers;build</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Soenneker.Libraries.SevenZip.Linux" Version="3.0.6">
+            <PrivateAssets>analyzers;build</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="Soenneker.Utils.Directory" Version="3.0.704" />
         <PackageReference Include="Soenneker.Utils.Process" Version="3.0.1314" />
         <PackageReference Include="Soenneker.Utils.Runtime" Version="3.0.846" />
-        <Content Include="Resources\7za.exe"
-                 Pack="true"
-                 PackageCopyToOutput="true" />
-        <Content Include="Resources\7zz"
-                 Pack="true"
-                 PackageCopyToOutput="true" />
     </ItemGroup>
 </Project>
